...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.serwylo.babydots.AnimatedDots
        android:id="@+id/dots"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.leinardi.android.speeddial.SpeedDialView
...
        app:sdMainFabClosedSrc="@drawable/ic_tune"
        app:sdMainFabOpenedBackgroundColor="@color/colorPrimary"
        app:sdMainFabClosedBackgroundColor="@color/colorPrimary"
    />

    <LinearLayout
        android:id="@+id/timer_wrapper"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
